--- a/ISSCuritibaLibrary/ISSCuritibaLibrary.csproj
+++ b/ISSCuritibaLibrary/ISSCuritibaLibrary.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Web.Services.Description" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
